--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>OD</title>
   <meta name="description" content="Graphic Design and Photography. New York">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="assets/favicon.png">
-  <link rel="stylesheet" href="styles/_od_home.css">
-  <link rel="stylesheet" type="text/css" href="styles/MyFontsWebfontsKit.css">
+  <link rel="icon" type="image/png" href="/assets/favicon.png">
+  <link rel="stylesheet" href="/styles/_od_home.css">
+  <link rel="stylesheet" type="text/css" href="/styles/MyFontsWebfontsKit.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script type="text/javascript" src="scripts/paper-full.js"></script>
+  <script type="text/javascript" src="/scripts/paper-full.js"></script>
     <!-- Define inlined PaperScript associate it with myCanvas -->
-  <script type="text/javascript" src="scripts/script.js" canvas="myCanvas"></script>
+  <script type="text/javascript" src="/scripts/script.js" canvas="myCanvas"></script>
   </script>
     <script> (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
