--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Graphic Design and Photography. New York">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="/assets/favicon.png">
-  <link rel="stylesheet" href="/styles/_od_home.css">
+  <link rel="stylesheet" type="text/css" href="/styles/home.css">
   <link rel="stylesheet" type="text/css" href="/styles/MyFontsWebfontsKit.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script type="text/javascript" src="/scripts/paper-full.js"></script>
