--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p class="sm">(Portfolio available upon request)</p>
   </div>
   <div class="block">
-    <p><a href="mailto:o@owendodd.com" target="_blank">Email</a>, <a href="https://www.instagram.com/owendodd/" target="_blank">Instagram</a>, <a href="https://twitter.com/owen_dodd" target="_blank">Twitter</a>, <a href="https://www.are.na/owen-dodd" target="_blank">Are.na</a></p>
+    <p><a href="mailto:owen.dodd@gmail.com" target="_blank">Email</a>, <a href="https://www.instagram.com/owendodd/" target="_blank">Instagram</a>, <a href="https://twitter.com/owen_dodd" target="_blank">Twitter</a>, <a href="https://www.are.na/owen-dodd" target="_blank">Are.na</a></p>
     <p class="sm">(Contact via email for commissions and collaborations)</p>
   </div>
 
