--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 </body>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="scripts/circle_cursor.js"></script>
+<!-- <script src="scripts/circle_cursor.js"></script>
 <script>
   $('.box').circursor();
-</script>
+</script> -->
 
 </html>
