--- a/index.html
+++ b/index.html
@@ -8,42 +8,14 @@
 
   <link rel="stylesheet" type="text/css" href="/styles/home.min.css">
   <link rel="stylesheet" type="text/css" href="/styles/MyFontsWebfontsKit.css">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
 </head>
 
 <body>
-  <div class="box">
 
-    <div class="dot tl"></div>
-    <div class="dot tr"></div>
-    <div class="dot bl"></div>
-    <div class="dot br"></div>
-
-  <header class="sm block">
-    <p>Owen Dodd</p>
-    <p>New York, NY</p>
-  </header>
-  <div class="block">
-    <p>Graphic Design and Photography</p>
-    <p class="sm">(Portfolio available upon request)</p>
-  </div>
-  <div class="block">
-    <p><a href="mailto:owen.dodd@gmail.com" target="_blank">Email</a>, <a href="https://www.instagram.com/owendodd/" target="_blank">Instagram</a>, <a href="https://twitter.com/owen_dodd" target="_blank">Twitter</a>, <a href="https://www.are.na/owen-dodd" target="_blank">Are.na</a></p>
-    <p class="sm">(Contact via email for commissions and collaborations)</p>
-  </div>
-
-  <div class="foot sm">
-    <p>Last Updated: Feb 2, 2018</p>
-  </div>
-
-  </div>
-
+<a class="mail" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
 </body>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<!-- <script src="scripts/circle_cursor.js"></script>
-<script>
-  $('.box').circursor();
-</script> -->
 
 </html>
