--- a/index.html
+++ b/index.html
@@ -9,12 +9,40 @@
   <link rel="stylesheet" type="text/css" href="/styles/home.min.css">
   <link rel="stylesheet" type="text/css" href="/styles/MyFontsWebfontsKit.css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-
 </head>
 
 <body>
 
-<a class="mail" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
+  <header>
+    <p>Owen Dodd, New York</p>
+  </header>
+
+  <section>
+    <div>
+      <h1>Information</h1>
+      <p>Owen is a graphic designer and photographer working across art, fashion, technology and publishing. Currently he is part of the design team at <a href="" target="_blank">Artsy.net</a> and a partner at <a href="" target="_blank">Solar Power Press</a>. Work samples and CV are availble upon request. Please contact for further information on commissions and collaborations.</p>
+    </div>
+
+    <div>
+      <h1>Links</h1>
+      <p>
+        <a href="https://www.are.na/owen-dodd/" target="_blank">Are.na</a>, 
+        <a href="http://instagram.com/owendodd" target="_blank">Instagram</a>, 
+        <a href="https://twitter.com/owen_dodd" target="_blank">Twitter</a>
+      </p>
+    </div>
+
+    <div>
+      <h1>Contact</h1>
+      <p><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></p>
+      <p>+1 (303) 819 0844</p>
+    </div>
+  </section>
+
+  <div class="bg">
+    </div>
+
+
 </body>
 
 
