--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Owen Dodd</title>
-
+  <link rel="icon" type="image/png" href="assets/favicon.png" />
   <link rel="stylesheet" type="text/css" href="/styles/home.min.css">
   <link rel="stylesheet" type="text/css" href="/styles/MyFontsWebfontsKit.css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
