--- a/photo/index.html
+++ b/photo/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Owen Dodd</title>
 
-  <link rel="stylesheet" type="text/css" href="/assets/css/home.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/home.min.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -51,35 +51,35 @@
 
     <div class="slider slider-one active">
       <div class="slide show">
-        <img src="/assets/imgs/slider1-1.jpg">
+        <img src="./assets/imgs/slider1-1.jpg">
       </div>
       <div class="slide">
-        <img src="/assets/imgs/slider1-2.jpg">
-        <img src="/assets/imgs/slider1-2.jpg">
+        <img src="./assets/imgs/slider1-2.jpg">
+        <img src="./assets/imgs/slider1-2.jpg">
       </div>
       <div class="slide">
-        <img src="/assets/imgs/slider1-3.jpg">
+        <img src="./assets/imgs/slider1-3.jpg">
       </div>
       <div class="slide">
-        <img class="sm" src="/assets/imgs/slider1-4.jpg">
+        <img class="sm" src="./assets/imgs/slider1-4.jpg">
       </div>
     </div>
 
     <div class="slider slider-two">
       <div class="slide show">
-        <img src="/assets/imgs/slider1-1.jpg">
-        <img src="/assets/imgs/slider1-1.jpg">
+        <img src="./assets/imgs/slider1-1.jpg">
+        <img src="./assets/imgs/slider1-1.jpg">
       </div>
       <div class="slide">
-        <img src="/assets/imgs/slider1-2.jpg">
+        <img src="./assets/imgs/slider1-2.jpg">
       </div>
       <div class="slide">
-        <img src="/assets/imgs/slider1-3.jpg">
-        <img class="sm" src="/assets/imgs/slider1-3.jpg">
+        <img src="./assets/imgs/slider1-3.jpg">
+        <img class="sm" src="./assets/imgs/slider1-3.jpg">
       </div>
       <div class="slide">
-        <img src="/assets/imgs/slider1-4.jpg">
-        <img src="/assets/imgs/slider1-3.jpg">
+        <img src="./assets/imgs/slider1-4.jpg">
+        <img src="./assets/imgs/slider1-3.jpg">
       </div>
     </div>
 
