--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 
   <header>
     <p>Owen Dodd, New York</p>
+    <p>Graphic design & photography</p>
   </header>
 
   <section>
-    <div>
+    <!-- <div>
       <h1>Information</h1>
       <p>Owen is a graphic designer and photographer working across art, fashion, technology and publishing. Currently he is part of the design team at <a href="" target="_blank">Artsy.net</a> and a partner at <a href="" target="_blank">Solar Power Press</a>. Work samples and CV are availble upon request. Please contact for further information on commissions and collaborations.</p>
-    </div>
+    </div> -->
 
     <div>
       <h1>Links</h1>
