global styles refactor

--- a/index.html
+++ b/index.html
@@ -6,26 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Owen Dodd</title>
   <link rel="icon" type="image/png" href="assets/favicon.png" />
-  <link rel="stylesheet" type="text/css" href="/styles/home.min.css">
-  <link rel="stylesheet" type="text/css" href="/styles/MyFontsWebfontsKit.css">
+  <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 </head>
 
-<body>
+<body class="home">
 
   <header>
-    <p>Owen Dodd, New York</p>
+    <h1>Owen Dodd, New York</h1>
     <p>Graphic design & photography</p>
-  </header>
 
-  <section>
     <!-- <div>
       <h1>Information</h1>
       <p>Owen is a graphic designer and photographer working across art, fashion, technology and publishing. Currently he is part of the design team at <a href="" target="_blank">Artsy.net</a> and a partner at <a href="" target="_blank">Solar Power Press</a>. Work samples and CV are availble upon request. Please contact for further information on commissions and collaborations.</p>
     </div> -->
 
     <div>
-      <h1>Links</h1>
+      <h2>Links</h2>
       <p>
         <a href="https://www.are.na/owen-dodd/" target="_blank">Are.na</a>, 
         <a href="http://instagram.com/owendodd" target="_blank">Instagram</a>, 
@@ -34,11 +31,11 @@
     </div>
 
     <div>
-      <h1>Contact</h1>
+      <h2>Contact</h2>
       <p><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></p>
       <p>+1 (303) 819 0844</p>
     </div>
-  </section>
+  </header>
 
   <div class="bg">
     </div>
