--- a/design/index.html
+++ b/design/index.html
@@ -5,9 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Owen Dodd</title>
-
+  <link rel="icon" type="image/png" href="assets/favicon.png" />
   <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css">
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </head>
@@ -15,49 +14,59 @@
 <body>
 
   <header>
-    <h1>
-      Owen Dodd, New York
-    </h1>
-    <div class="info">
-      <h2>Information</h2>
+    <h1><b>
+        Owen Dodd, New York
+      </b></h1>
     <p>
-      Product designer and art director. Currently leading design for the editorial experience at Artsy.
+      Product designer and art director. Currently leading design for the editorial experience at Artsy. Cras mattis
+      consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
     </p>
-  </div>
 
     <div class="toc">
       <h2>Case studies</h2>
-      <p><a href="#articles">Article typoglogy</a></p>
-      <p><a href="#articles">Curations and partnerships</a></p>
-      <p><a href="#articles">News articles</a></p>
-      <p><a href="#articles">Authentication</a></p>
-      <p><a href="#articles">Artwork collections</a></p>
+      <p><a href="#articles">Article Segmentation</a></p>
+      <p><a href="#articles">Curations and Partnerships</a></p>
+      <p><a href="#articles">News Articles</a></p>
+      <p><a href="#articles">Artwork Collections</a></p>
     </div>
 
     <div class="contact">
       <h2>Contact</h2>
+      <p><a href="tel:303-819-0844">+1 (303) 819 0844</a></p>
       <p><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></p>
-      <p>+1 (303) 819 0844</p>
     </div>
   </header>
 
   <section id="articles">
-      <h1>Article typology</h1>
-      <h2>Background</h2>
-      <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor. Cum sociis
-        natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus vel augue
-        laoreet rutrum faucibus dolor auctor.</p>
-      <h2>Goals</h2>
-      <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor. Cum sociis
-        natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus vel augue
-        laoreet rutrum faucibus dolor auctor.</p>
+    <h1>Article segmentation</h1>
+
+    <h2>Background</h2>
+    <p>Artsy's editorial content has undergone many transformations. What started out as a user generated content
+      platform eventually turned into a subscription based content production platform, before transitioning into it's
+      current incarnation as a truly object media arm of the larger company. These many iterations led to a large
+      variety of users engaging with our internal publishing tools to produce a wide range of content with very
+      different purposes.</p>
+
+    <h2>Goals</h2>
+    <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor. Cum sociis
+      natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus vel augue
+      laoreet rutrum faucibus dolor auctor.</p>
     <img src="" alt="">
     <img src="" alt="">
     <img src="" alt="">
     <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor. Cum sociis
       natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus vel augue
       laoreet rutrum faucibus dolor auctor.</p>
+
+    <h2>Footnotes</h2>
+    <p>
+      <b>Role:</b>
+      Led the product strategy and design.
+      <b>Collaborators:</b>
+      Kana Abe (lead engineer), Eve Essex (engineer), Marina Cashdan (editorial director)
+    </p>
   </section>
+
 
 
 
