--- a/design/index.html
+++ b/design/index.html
@@ -13,29 +13,29 @@
 
 <body>
 
-  <header>
-    <h1><b>
+  <header class="grid-container">
+    <h1 class="grid-1">
         Owen Dodd, New York
-      </b></h1>
-    <p>
-      Product designer and art director. Currently leading design for the editorial experience at Artsy. Cras mattis
-      consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
-    </p>
+    </h1>
+    <h2 class="grid-1 off-2"><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h2>
+    <h2><a href="tel:303-819-0844">+1 (303) 819 0844</a></h2>
 
-    <div class="toc">
-      <h2>Case studies</h2>
-      <p><a href="#articles">Article Segmentation</a></p>
-      <p><a href="#articles">Curations and Partnerships</a></p>
-      <p><a href="#articles">News Articles</a></p>
-      <p><a href="#articles">Artwork Collections</a></p>
-    </div>
-
-    <div class="contact">
-      <h2>Contact</h2>
-      <p><a href="tel:303-819-0844">+1 (303) 819 0844</a></p>
-      <p><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></p>
-    </div>
+    
   </header>
+
+  <div class="grid-container">
+  <h1 class="grid-2">
+    Product designer, currently leading design for the editorial experience at Artsy.
+  </h1>
+  </div>
+
+  <div class="toc">
+    <h2>Selected work</h2>
+    <h1><a href="#articles">Article Segmentation</a></h1>
+    <h1><a href="#articles">Curations and Partnerships</a></h1>
+    <h1><a href="#articles">News Articles</a></h1>
+    <h1><a href="#articles">Artwork Collections</a></h1>
+  </div>
 
   <section id="articles">
     <h1>Article segmentation</h1>
