--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="home">
 
   <header>
-    <h1><b>Owen Dodd,</b> New York</h1>
+    <h1>Owen Dodd, New York</h1>
     <p>Graphic design & photography</p>
 
     <!-- <div>
@@ -21,16 +21,16 @@
       <p>Owen is a graphic designer and photographer working across art, fashion, technology and publishing. Currently he is part of the design team at <a href="" target="_blank">Artsy.net</a> and a partner at <a href="" target="_blank">Solar Power Press</a>. Work samples and CV are availble upon request. Please contact for further information on commissions and collaborations.</p>
     </div> -->
 
-    <div class="links">
+    <div>
       <h2>Links</h2>
       <p>
-        <a href="https://www.are.na/owen-dodd/" target="_blank">Are.na</a>
-        <a href="http://instagram.com/owendodd" target="_blank">Instagram</a> 
+        <a href="https://www.are.na/owen-dodd/" target="_blank">Are.na</a>, 
+        <a href="http://instagram.com/owendodd" target="_blank">Instagram</a>, 
         <a href="https://twitter.com/owen_dodd" target="_blank">Twitter</a>
       </p>
     </div>
 
-    <div class="contact">
+    <div>
       <h2>Contact</h2>
       <p><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></p>
       <p>+1 (303) 819 0844</p>
