--- a/design/index.html
+++ b/design/index.html
@@ -13,29 +13,34 @@
 
 <body>
 
-  <header class="grid-container">
-    <h1 class="grid-1">
+  <header>
+    <div class="name">
+      <h1><b>
         Owen Dodd, New York
-    </h1>
-    <h2 class="grid-1 off-2"><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h2>
-    <h2><a href="tel:303-819-0844">+1 (303) 819 0844</a></h2>
+      </b></h1>
+    </div>
+    <div>
+      <h1>
+        Product designer and art director. Currently leading design for the editorial experience at Artsy. Cras mattis
+        consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+      </h1>
+    </div>
 
-    
+    <div class="toc">
+      <h2>Selected work</h2>
+      <h1><a href="#articles">Article Segmentation</a></h1>
+      <h1><a href="#articles">Curations and Partnerships</a></h1>
+      <h1><a href="#articles">News Articles</a></h1>
+      <h1><a href="#articles">Artwork Collections</a></h1>
+    </div>
+
+    <div class="contact">
+      <h2>Contact</h2>
+      <h1><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
+      <h1><a href="tel:303-819-0844">+1 (303) 819 0844</a></h1>
+
+    </div>
   </header>
-
-  <div class="grid-container">
-  <h1 class="grid-2">
-    Product designer, currently leading design for the editorial experience at Artsy.
-  </h1>
-  </div>
-
-  <div class="toc">
-    <h2>Selected work</h2>
-    <h1><a href="#articles">Article Segmentation</a></h1>
-    <h1><a href="#articles">Curations and Partnerships</a></h1>
-    <h1><a href="#articles">News Articles</a></h1>
-    <h1><a href="#articles">Artwork Collections</a></h1>
-  </div>
 
   <section id="articles">
     <h1>Article segmentation</h1>
