--- a/index.html
+++ b/index.html
@@ -13,13 +13,36 @@
 <body class="home">
 
   <header>
-    <h1>Owen Dodd, New York</h1>
-    <p>Graphic design & photography</p>
-
+    <div class="name">
+      <h1><b>
+        Owen Dodd, New York
+      </b></h1>
+    </div>
     <!-- <div>
-      <h1>Information</h1>
-      <p>Owen is a graphic designer and photographer working across art, fashion, technology and publishing. Currently he is part of the design team at <a href="" target="_blank">Artsy.net</a> and a partner at <a href="" target="_blank">Solar Power Press</a>. Work samples and CV are availble upon request. Please contact for further information on commissions and collaborations.</p>
+      <h1>
+        Interaction design, graphic design, publishing, photography, cooking.
+      </h1>
     </div> -->
+
+    <div class="inline">
+      <!-- <h2>Links</h2>
+      <h1><a href="https://www.are.na/owen-dodd/" target="_blank">Are.na</a></h1>
+      <h1><a href="http://instagram.com/owendodd" target="_blank">Instagram</a></h1> -->
+      <h1><a href="mailto:mail@owendodd.com">Email</a></h1>
+
+    </div>
+
+    <!-- <div class="inline">
+      <h2>Contact</h2>
+      
+      <h1><a href="tel:303-819-0844">+1 (303) 819 0844</a></h1>
+
+    </div> -->
+  </header>
+<!-- 
+  <header>
+    <h1>Owen Dodd, New York</h1>
+    <h1>Graphic design & photography</h1>
 
     <div>
       <h2>Links</h2>
@@ -35,7 +58,7 @@
       <p><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></p>
       <p>+1 (303) 819 0844</p>
     </div>
-  </header>
+  </header> -->
 
   <div class="bg">
     </div>
