--- a/design/index.html
+++ b/design/index.html
@@ -34,7 +34,7 @@
       <h1><a href="#articles">Artwork Collections</a></h1>
     </div>
 
-    <div class="contact">
+    <div class="contact inline">
       <h2>Contact</h2>
       <h1><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
       <h1><a href="tel:303-819-0844">+1 (303) 819 0844</a></h1>
