--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <header>
     <div>
       <h1>
-        <b>Owen Dodd, New York.</b> Product design and art direction.
+        <b>Owen Dodd, New York.</b> 
       </h1>
+      <h1>Product design and art direction.</h1>
       </div>
 
       <div class="bg">
