--- a/design/index.html
+++ b/design/index.html
@@ -18,15 +18,13 @@
       <h1><b>
         Owen Dodd, New York
       </b></h1>
-    </div>
-    <div>
       <h1>
-        Product designer and art director. Currently leading design for the editorial experience at Artsy. Cras mattis
-        consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
-      </h1>
+          Product designer and art director. Currently leading design for the editorial experience at Artsy. Cras mattis
+          consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+        </h1>
     </div>
 
-    <div class="toc">
+    <div >
       <h2>Selected work</h2>
       <h1><a href="#articles">Article Segmentation</a></h1>
       <h1><a href="#articles">Curations and Partnerships</a></h1>
@@ -34,7 +32,7 @@
       <h1><a href="#articles">Artwork Collections</a></h1>
     </div>
 
-    <div class="contact inline">
+    <div>
       <h2>Contact</h2>
       <h1><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
       <h1><a href="tel:303-819-0844">+1 (303) 819 0844</a></h1>
@@ -56,16 +54,16 @@
     <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor. Cum sociis
       natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus vel augue
       laoreet rutrum faucibus dolor auctor.</p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+
+    <div class="slider"><img src="/design/assets/article_1.png" alt=""></div>
+  
     <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor. Cum sociis
       natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus vel augue
       laoreet rutrum faucibus dolor auctor.</p>
 
     <h2>Footnotes</h2>
     <p>
-      <b>Role:</b>
+      <b>Role:</b>  
       Led the product strategy and design.
       <b>Collaborators:</b>
       Kana Abe (lead engineer), Eve Essex (engineer), Marina Cashdan (editorial director)
