--- a/design/index.html
+++ b/design/index.html
@@ -14,31 +14,34 @@
 <body>
 
   <header>
-    <div class="name">
-      <h1><b>
-        Owen Dodd, New York
-      </b></h1>
-      <h1>
-          Product designer and art director. Currently leading design for the editorial experience at Artsy. Cras mattis
-          consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
-        </h1>
-    </div>
-
     <div >
-      <h2>Selected work</h2>
+      <h1 class="name">
+          Owen Dodd, New York
+      </h1>
+      <h1>
+        Product design and art direction
+      </h1>
+
+      <h2>Case studies</h2>
       <h1><a href="#articles">Article Segmentation</a></h1>
       <h1><a href="#articles">Curations and Partnerships</a></h1>
       <h1><a href="#articles">News Articles</a></h1>
       <h1><a href="#articles">Artwork Collections</a></h1>
     </div>
 
-    <div>
-      <h2>Contact</h2>
-      <h1><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
-      <h1><a href="tel:303-819-0844">+1 (303) 819 0844</a></h1>
-
+    <div class="bg">
     </div>
+
+
+    <div>
+        <h1 class="contact"><a class="contact" href="tel:303-819-0844">+1 (303) 819 0844</a> <a class="contact" href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
+  
+      </div>
   </header>
+
+  <div class="menu">
+    <h1></h1>
+  </div>
 
   <section id="articles">
     <h1>Article segmentation</h1>
@@ -56,25 +59,21 @@
       laoreet rutrum faucibus dolor auctor.</p>
 
     <div class="slider"><img src="/design/assets/article_1.png" alt=""></div>
-  
+
     <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor. Cum sociis
       natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus vel augue
       laoreet rutrum faucibus dolor auctor.</p>
 
     <h2>Footnotes</h2>
-    <p>
-      <b>Role:</b>  
-      Led the product strategy and design.
-      <b>Collaborators:</b>
-      Kana Abe (lead engineer), Eve Essex (engineer), Marina Cashdan (editorial director)
-    </p>
+    <p>Role: Led the product strategy and design. Collaborators: Kana Abe (lead engineer), Eve Essex (engineer), Marina
+      Cashdan (editorial director)</p>
   </section>
 
 
 
 
 
-  <script type="text/javascript" src="assets/js/script.js"></script>
+  <script type="text/javascript" src="/assets/js/script.js"></script>
 </body>
 
 </html>
