--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <header>
     <div>
       <h1 class="name">
-        Owen Dodd, New York
+        <b>Owen Dodd, New York</b>
       </h1>
-      <h1>Product design and art direction</h1>
+      <h1 class="name">Product design and art direction</h1>
 
       <h2>Links</h2>
 
