--- a/design/index.html
+++ b/design/index.html
@@ -13,8 +13,9 @@
 
 <body>
 
+  <!-- Info and toggle -->
   <header>
-    <div >
+    <div>
       <h1 class="name">
         <b>Owen Dodd, New York</b>
       </h1>
@@ -32,17 +33,17 @@
     <div class="bg">
     </div>
 
-
     <div>
-        <h1 class="contact"><a class="contact" href="tel:303-819-0844">+1 (303) 819 0844</a> <a class="contact" href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
-  
-      </div>
+      <h1 class="contact"><a class="contact" href="tel:303-819-0844">+1 (303) 819 0844</a> <a class="contact" href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
+    </div>
   </header>
 
   <div class="menu">
     <h1></h1>
   </div>
 
+
+  <!-- Start projects -->
   <section id="articles">
     <h1>Article segmentation</h1>
 
@@ -58,11 +59,57 @@
       natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus vel augue
       laoreet rutrum faucibus dolor auctor.</p>
 
-    <div class="slider"><img src="/design/assets/article_1.png" alt=""></div>
+    <div class="slider">
+
+      <div class="controls">
+        <div class="prev"></div>
+        <div class="next"></div>
+      </div>
+
+      <div class="slide">
+        <img src="/design/assets/segmentation_outline_1.png" alt="">
+        <div class="info">
+          <h2 class="caption">Initial user structure</h2>
+          <h2 class="indicator"></h2>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="/design/assets/segmentation_outline_2.png" alt="">
+        <div class="info">
+          <h2 class="caption">Initial user structure</h2>
+          <h2 class="indicator"></h2>
+        </div>
+      </div>
+
+    </div>
 
     <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor. Cum sociis
       natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus vel augue
       laoreet rutrum faucibus dolor auctor.</p>
+
+    <div class="slider">
+
+      <div class="controls">
+        <div class="prev"></div>
+        <div class="next"></div>
+      </div>
+
+      <div class="slide">
+        <img src="/design/assets/segmentation_outline_1.png" alt="">
+        <div class="info">
+          <h2 class="caption">Initial user structure</h2>
+          <h2 class="indicator"></h2>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="/design/assets/segmentation_outline_2.png" alt="">
+        <div class="info">
+          <h2 class="caption">Initial user structure</h2>
+          <h2 class="indicator"></h2>
+        </div>
+      </div>
+
+    </div>
 
     <h2>Footnotes</h2>
     <p>Role: Led the product strategy and design. Collaborators: Kana Abe (lead engineer), Eve Essex (engineer), Marina
