--- a/design/index.html
+++ b/design/index.html
@@ -17,24 +17,26 @@
   <header>
     <div>
       <h1 class="name">
-        <b>Owen Dodd, New York</b>
+        Owen Dodd, New York
       </h1>
-      <h1 class="name">
-        Product design and art direction
-      </h1>
+      <p class="name">
+        Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod
+        semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+      </p>
 
       <h2>Case studies</h2>
-      <h1><a href="#articles">Article Segmentation</a></h1>
-      <h1><a href="#articles">Curations and Partnerships</a></h1>
-      <h1><a href="#articles">News Articles</a></h1>
-      <h1><a href="#articles">Artwork Collections</a></h1>
+      <p><a href="#articles">Article Typology</a></p>
+      <p><a href="#articles">Curations and Partnerships</a></p>
+      <p><a href="#articles">News Articles</a></p>
+      <p><a href="#articles">Artwork Collections</a></p>
     </div>
 
     <div class="bg">
     </div>
 
     <div>
-      <h1 class="contact"><a class="contact" href="tel:303-819-0844">+1 (303) 819 0844</a> <a class="contact" href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
+      <p class="contact">19 S. Oxford St. #10 Brooklyn, NY<a class="contact" href="mailto:mail@owendodd.com">mail@owendodd.com</a> <a class="contact"
+          href="tel:303-819-0844">+1 (303) 819 0844</a></p>
     </div>
   </header>
 
@@ -48,6 +50,11 @@
     <h1>Article segmentation</h1>
 
     <h2>Background</h2>
+    <p>Artsy's editorial content has undergone many transformations. What started out as a user generated content
+      platform eventually turned into a subscription based content production platform, before transitioning into it's
+      current incarnation as a truly object media arm of the larger company. These many iterations led to a large
+      variety of users engaging with our internal publishing tools to produce a wide range of content with very
+      different purposes.</p>
     <p>Artsy's editorial content has undergone many transformations. What started out as a user generated content
       platform eventually turned into a subscription based content production platform, before transitioning into it's
       current incarnation as a truly object media arm of the larger company. These many iterations led to a large
