--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
   <header>
     <div>
       <h1 class="name">
-        <b>Owen Dodd, New York</b>
+        Owen Dodd, New York
       </h1>
-      <h1 class="name">Product design and art direction</h1>
+      <p class="name">Product design and art direction at Artsy. Publishing projects, books, and editions in physical and digital forms at Solar Power Press. Culinary events and collaborations at Jzuj. Selected work available upon request.</p>
 
       <h2>Links</h2>
 
-      <h1><a href="http://www.solar-power.press/" target="_blank">solar-power.press</a></h1>
-      <h1><a href="http://www.jzuj.recipes/" target="_blank">jzuj.recipes</a></h1>
-      <h1><a href="https://www.are.na/owen-dodd/" target="_blank">are.na/owen-dodd</a></h1>
-      <h1><a href="http://www.instagram.com/owendodd" target="_blank">instagram.com/owendodd</a></h1>
+      <p><a href="http://www.solar-power.press/" target="_blank">solar-power.press</a></p>
+      <p><a href="http://www.jzuj.recipes/" target="_blank">jzuj.recipes</a></p>
+      <p><a href="http://www.owendodd.com/photo" target="_blank">owendodd.com/photo</a></p>
+      <p><a href="https://www.are.na/owen-dodd/" target="_blank">are.na/owen-dodd</a></p>
+      <p><a href="http://www.instagram.com/owendodd" target="_blank">instagram.com/owendodd</a></p>
+
 
     </div>
 
@@ -34,7 +36,8 @@
 
 
     <div>
-      <h1 class="contact"><a class="contact" href="tel:303-819-0844">+1 (303) 819 0844</a> <a class="contact" href="mailto:mail@owendodd.com">mail@owendodd.com</a></h1>
+      <p class="contact">19 S. Oxford St. #10 Brooklyn, NY<a class="contact" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
+        <a class="contact" href="tel:303-819-0844">+1 (303) 819 0844</a></p>
 
     </div>
 
