disable photo link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <p><a href="http://www.solar-power.press/" target="_blank">solar-power.press</a></p>
       <p><a href="http://www.jzuj.recipes/" target="_blank">jzuj.recipes</a></p>
-      <p><a href="http://www.owendodd.com/photo" target="_blank">owendodd.com/photo</a></p>
+      <!-- <p><a href="http://www.owendodd.com/photo" target="_blank">owendodd.com/photo</a></p> -->
       <p><a href="https://www.are.na/owen-dodd/" target="_blank">are.na/owen-dodd</a></p>
       <p><a href="http://www.instagram.com/owendodd" target="_blank">instagram.com/owendodd</a></p>
 
