--- a/photo/index.html
+++ b/photo/index.html
@@ -9,6 +9,19 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/home.min.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-86134698-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-86134698-1');
+  </script>
+
 
 </head>
 
@@ -30,13 +43,13 @@
     </div>
 
     <div>
-        <h1>Contact</h1>
-        <p><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></p>
-        <p>+1 (303) 819 0844</p>
-      </div>
+      <h1>Contact</h1>
+      <p><a href="mailto:mail@owendodd.com">mail@owendodd.com</a></p>
+      <p>+1 (303) 819 0844</p>
+    </div>
   </header>
 
-  
+
   <div class="indicator"></div>
   <div class="hider">Hide info</div>
 
