--- a/design/index.html
+++ b/design/index.html
@@ -8,6 +8,19 @@
   <link rel="icon" type="image/png" href="assets/favicon.png" />
   <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-86134698-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-86134698-1');
+  </script>
+
 
 </head>
 
@@ -35,8 +48,9 @@
     </div>
 
     <div>
-      <p class="contact">19 S. Oxford St. #10 Brooklyn, NY<a class="contact" href="mailto:mail@owendodd.com">mail@owendodd.com</a> <a class="contact"
-          href="tel:303-819-0844">+1 (303) 819 0844</a></p>
+      <p class="contact">19 S. Oxford St. #10 Brooklyn, NY<a class="contact"
+          href="mailto:mail@owendodd.com">mail@owendodd.com</a> <a class="contact" href="tel:303-819-0844">+1 (303) 819
+          0844</a></p>
     </div>
   </header>
 
