--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:500" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-86134698-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-86134698-1');
+  </script>
+
 </head>
 
 <body class="home">
@@ -18,7 +31,9 @@
       <h1 class="name">
         Owen Dodd, New York
       </h1>
-      <p class="name">Product design and art direction at Artsy. Publishing projects, books, and editions in physical and digital forms at Solar Power Press. Culinary events and collaborations at Jzuj. Selected work available upon request.</p>
+      <p class="name">Product design and art direction at Artsy. Publishing projects, books, and editions in physical
+        and digital forms at Solar Power Press. Culinary events and collaborations at Jzuj. Selected work available upon
+        request.</p>
 
       <h2>Links</h2>
 
@@ -36,7 +51,8 @@
 
 
     <div>
-      <p class="contact">19 S. Oxford St. #10 Brooklyn, NY<a class="contact" href="mailto:mail@owendodd.com">mail@owendodd.com</a>
+      <p class="contact">19 S. Oxford St. #10 Brooklyn, NY<a class="contact"
+          href="mailto:mail@owendodd.com">mail@owendodd.com</a>
         <a class="contact" href="tel:303-819-0844">+1 (303) 819 0844</a></p>
 
     </div>
