first pass simple buildout

--- a/design/index.html
+++ b/design/index.html
@@ -30,26 +30,28 @@
   <header>
     <div>
       <h1 class="name">
-        Owen Dodd, New York
+        Owen Dodd
       </h1>
-      <p class="name">
-        Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod
-        semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-      </p>
+      <h1 class="bio">
+        Product design and art direction, based in New York City. Working in and around art, technology, food and publishing.
+      </h1>
 
-      <h2>Case studies</h2>
+      <!-- <h2>Case studies</h2>
       <p><a href="#articles">Article Typology</a></p>
       <p><a href="#articles">Curations and Partnerships</a></p>
       <p><a href="#articles">News Articles</a></p>
-      <p><a href="#articles">Artwork Collections</a></p>
+      <p><a href="#articles">Artwork Collections</a></p> -->
     </div>
 
     <div class="bg">
     </div>
 
     <div>
-      <p class="contact">19 S. Oxford St. #10 Brooklyn, NY<a class="contact"
-          href="mailto:mail@owendodd.com">mail@owendodd.com</a> <a class="contact" href="tel:303-819-0844">+1 (303) 819
+      <h2>
+        <span class="contact">19 S. Oxford St. #10 Brooklyn, NY</span>
+        <a class="contact"
+          href="mailto:mail@owendodd.com">mail@owendodd.com</a> 
+        <a class="contact" href="tel:303-819-0844">+1 (303) 819
           0844</a></p>
     </div>
   </header>
@@ -61,80 +63,9 @@
 
   <!-- Start projects -->
   <section id="articles">
-    <h1>Article segmentation</h1>
+    <h1>Artsy <span class="date">March 2019—Present</span></h1>
 
-    <h2>Background</h2>
-    <p>Artsy's editorial content has undergone many transformations. What started out as a user generated content
-      platform eventually turned into a subscription based content production platform, before transitioning into it's
-      current incarnation as a truly object media arm of the larger company. These many iterations led to a large
-      variety of users engaging with our internal publishing tools to produce a wide range of content with very
-      different purposes.</p>
-    <p>Artsy's editorial content has undergone many transformations. What started out as a user generated content
-      platform eventually turned into a subscription based content production platform, before transitioning into it's
-      current incarnation as a truly object media arm of the larger company. These many iterations led to a large
-      variety of users engaging with our internal publishing tools to produce a wide range of content with very
-      different purposes.</p>
-
-    <h2>Goals</h2>
-    <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor. Cum sociis
-      natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus vel augue
-      laoreet rutrum faucibus dolor auctor.</p>
-
-    <div class="slider">
-
-      <div class="controls">
-        <div class="prev"></div>
-        <div class="next"></div>
-      </div>
-
-      <div class="slide">
-        <img src="/design/assets/segmentation_outline_1.png" alt="">
-        <div class="info">
-          <h2 class="caption">Initial user structure</h2>
-          <h2 class="indicator"></h2>
-        </div>
-      </div>
-      <div class="slide">
-        <img src="/design/assets/segmentation_outline_2.png" alt="">
-        <div class="info">
-          <h2 class="caption">Initial user structure</h2>
-          <h2 class="indicator"></h2>
-        </div>
-      </div>
-
-    </div>
-
-    <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor. Cum sociis
-      natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus vel augue
-      laoreet rutrum faucibus dolor auctor.</p>
-
-    <div class="slider">
-
-      <div class="controls">
-        <div class="prev"></div>
-        <div class="next"></div>
-      </div>
-
-      <div class="slide">
-        <img src="/design/assets/segmentation_outline_1.png" alt="">
-        <div class="info">
-          <h2 class="caption">Initial user structure</h2>
-          <h2 class="indicator"></h2>
-        </div>
-      </div>
-      <div class="slide">
-        <img src="/design/assets/segmentation_outline_2.png" alt="">
-        <div class="info">
-          <h2 class="caption">Initial user structure</h2>
-          <h2 class="indicator"></h2>
-        </div>
-      </div>
-
-    </div>
-
-    <h2>Footnotes</h2>
-    <p>Role: Led the product strategy and design. Collaborators: Kana Abe (lead engineer), Eve Essex (engineer), Marina
-      Cashdan (editorial director)</p>
+    <p>Working on the Galleries product team, focusing on growing and retaining our subscribing gallery partners by building simplifying their workflows and blah blah.</p>
   </section>
 
 
