--- a/index.html
+++ b/index.html
@@ -26,44 +26,42 @@
 
 <body class="home">
 
-  <header>
-    <div>
-      <h1 class="name">
-        Owen Dodd, New York
-      </h1>
-      <p class="name">Product design and art direction at Artsy. Publishing projects, books, and editions in physical
-        and digital forms at Solar Power Press. Culinary events and collaborations at Jzuj. Selected work available upon
-        request.</p>
+    <header>
+        <div>
+          <div class="name">
+            <h1>
+              Owen Dodd
+            </h1>
+          </div>
+          <div class="bio">
+            <h1>
+              Product design and art direction, based in New York City. Working in and around art, technology, food and publishing.
+            </h1>
+          </div>
 
-      <h2>Links</h2>
-
-      <p><a href="http://www.solar-power.press/" target="_blank">solar-power.press</a></p>
-      <p><a href="http://www.jzuj.recipes/" target="_blank">jzuj.recipes</a></p>
-      <!-- <p><a href="http://www.owendodd.com/photo" target="_blank">owendodd.com/photo</a></p> -->
-      <p><a href="https://www.are.na/owen-dodd/" target="_blank">are.na/owen-dodd</a></p>
-      <p><a href="http://www.instagram.com/owendodd" target="_blank">instagram.com/owendodd</a></p>
-
-
-    </div>
-
-    <div class="bg">
-    </div>
-
-
-    <div>
-      <p class="contact">19 S. Oxford St. #10 Brooklyn, NY<a class="contact"
-          href="mailto:mail@owendodd.com">mail@owendodd.com</a>
-        <a class="contact" href="tel:303-819-0844">+1 (303) 819 0844</a></p>
-
-    </div>
+        </div>
+  
+        <div>
+          <h2 class="footer">
+              <span class="contact">Brooklyn, NY</span>
+              <a class="contact" href="mailto:mail@owendodd.com"
+                >mail@owendodd.com</a
+              >
+              <a class="contact" href="https://www.are.na/owen-dodd/" target="_blank">Are.na</a>
+              <a class="contact" href="http://www.instagram.com/owendodd" target="_blank">Instagram</a>
+              
+            </h2>
+        </div>
+      </header>
 
 
+      <section>
+          <h2>
+              <span class="contact">Projects:</span> <a class="contact" href="http://www.jzujfood.com/" target="_blank">Jzuj Food</a>, 
+              <a class="contact" href="http://www.solar-power.press/" target="_blank">Solar Power Press</a></h2>
+      </section>
 
 
-
-
-
-  </header>
 
 
 
