--- a/design/index.html
+++ b/design/index.html
@@ -1,78 +1,148 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <title>Owen Dodd</title>
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-86134698-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Owen Dodd</title>
-  <link rel="icon" type="image/png" href="assets/favicon.png" />
-  <link rel="stylesheet" type="text/css" href="../assets/css/home.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-86134698-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
+      gtag("config", "UA-86134698-1");
+    </script>
+  </head>
 
-    gtag('config', 'UA-86134698-1');
-  </script>
+  <body>
+    <header>
+      <div>
+        <div class="name">
+          <h1>
+            Owen Dodd
+          </h1>
+        </div>
+        <div class="bio">
+          <h1>
+            Product design and art direction, based in New York City. Working in
+            and around art, technology, food and publishing.
+          </h1>
+        </div>
+      </div>
 
+      <div>
+        <h2 class="footer">
+          <span class="contact">19 S. Oxford St. #10 Brooklyn, NY</span>
+          <a class="contact" href="mailto:mail@owendodd.com"
+            >mail@owendodd.com</a
+          >
+          <a class="contact" href="tel:303-819-0844">+1 (303) 819 0844</a>
+        </h2>
+      </div>
+    </header>
 
-</head>
+    <div class="menu">
+      <h2></h2>
+    </div>
 
-<body>
+    <!-- Start projects -->
+    <section>
+      <h2>&#8650; Work experience</h2>
+    </section>
 
-  <!-- Info and toggle -->
-  <header>
-    <div>
-      <h1 class="name">
-        Owen Dodd
+    <section>
+      <h1>
+        Artsy <span class="date-left">(2015–Present)</span>
+        <span class="date-left">Product Designer</span>
       </h1>
-      <h1 class="bio">
-        Product design and art direction, based in New York City. Working in and around art, technology, food and publishing.
+      <p>
+        Artsy is the global platform for discovering and collecting art. Artsy
+        partners with leading museums, international galleries, auction houses,
+        and art fairs to create the world’s largest art marketplace. With 2,500+
+        partners across 90+ countries and the most-read art publication online,
+        Artsy empowers a global audience to learn about, discover, and collect
+        art.
+      </p>
+      <br />
+
+      <h2>Feb 2019–Present</h2>
+      <p>
+        Product designer for the Galleries product team. Building tools to
+        enable our network of subscribing gallery partners to managage their
+        inventory of works and connect with new and established collectors.
+      </p>
+      <br />
+
+      <h2>Jan 2018–Feb 2019</h2>
+      <p>
+        Product designer for the Grow product team. Increasing Artsy’s userbase
+        through the creation and optimization of commericial pathways both on
+        and off platform.
+      </p>
+      <br />
+
+      <h2>Nov 2015–Jan 2018</h2>
+      <p>
+        Product designer and product manager for the Publishing product team.
+        Overhauling the front and back end experiences for Artsy’s editorial
+        team as they grew to become one of the most read online arts
+        publications.
+      </p>
+      <br />
+
+      <h2>Jan–Nov 2015</h2>
+      <p>
+        Product designer and communications designer. Working across the front
+        end of the web product creating and optimizing experiences to enable our
+        users to collect and learn about art online. Developing printed and
+        digital collateral for a range of events and partnerships.
+      </p>
+    </section>
+
+    <section>
+      <h1>
+        Berger & Föhr <span class="date-left">(May 2013–Sep 2014)</span>
+        <span class="date-left">Designer</span>
       </h1>
+      <p>
+        Berger & Föhr is a graphic and brand experience design studio in
+        Boulder, Colorado. They create brand strategies, visual identity
+        systems, digital products, and printed collateral for cultural and
+        commercial clients.
+      </p>
+    </section>
 
-      <!-- <h2>Case studies</h2>
-      <p><a href="#articles">Article Typology</a></p>
-      <p><a href="#articles">Curations and Partnerships</a></p>
-      <p><a href="#articles">News Articles</a></p>
-      <p><a href="#articles">Artwork Collections</a></p> -->
-    </div>
+    <section>
+      <h1>
+        Zut Alors! <span class="date-left">(Jan 2013–May 2013)</span>
+        <span class="date-left">Design Intern</span>
+      </h1>
+      <p>
+        Zut Alors! is a graphic design studio based in New York City. They
+        develop digital and printed material for a range of clients in the
+        cultural sector.
+      </p>
+    </section>
 
-    <div class="bg">
-    </div>
+    <section>
+        <h2>In depth case-studies available <a class="contact" href="mailto:mail@owendodd.com"
+          >upon request</a
+        >.</h2>
+      </section>
 
-    <div>
-      <h2>
-        <span class="contact">19 S. Oxford St. #10 Brooklyn, NY</span>
-        <a class="contact"
-          href="mailto:mail@owendodd.com">mail@owendodd.com</a> 
-        <a class="contact" href="tel:303-819-0844">+1 (303) 819
-          0844</a></p>
-    </div>
-  </header>
-
-  <div class="menu">
-    <h1></h1>
-  </div>
-
-
-  <!-- Start projects -->
-  <section id="articles">
-    <h1>Artsy <span class="date">March 2019—Present</span></h1>
-
-    <p>Working on the Galleries product team, focusing on growing and retaining our subscribing gallery partners by building simplifying their workflows and blah blah.</p>
-  </section>
-
-
-
-
-
-  <script type="text/javascript" src="/assets/js/script.js"></script>
-</body>
-
+    <script type="text/javascript" src="/assets/js/script.js"></script>
+  </body>
 </html>
