add first img git add .

--- a/design/index.html
+++ b/design/index.html
@@ -84,6 +84,8 @@
         enable our network of subscribing gallery partners to managage their
         inventory of works and connect with new and established collectors.
       </p>
+      <img src="/design/assets/analytics.png" alt="Analytics dashboard">
+      <h2 class="caption">CMS analytics dashboard</h2>
       <br />
 
       <h2>Jan 2018–Feb 2019</h2>
