--- a/design/index.html
+++ b/design/index.html
@@ -85,7 +85,7 @@
         inventory of works and connect with new and established collectors.
       </p>
       <img src="/design/assets/analytics.png" alt="Analytics dashboard">
-      <h2 class="caption">CMS analytics dashboard</h2>
+      <h2 class="caption">Partner analytics dashboard</h2>
       <br />
 
       <h2>Jan 2018–Feb 2019</h2>
@@ -94,6 +94,12 @@
         through the creation and optimization of commericial pathways both on
         and off platform.
       </p>
+      <img src="/design/assets/collections.png" alt="Analytics dashboard">
+      <h2 class="caption">Collections and collections admin</h2>
+      <img src="/design/assets/local discovery.png" alt="Analytics dashboard">
+      <h2 class="caption">Artsy City Guide, in partnership with BMW</h2>
+      <img src="/design/assets/article tooltips.png" alt="Analytics dashboard">
+      <h2 class="caption">Aritcle artist tooltips</h2>
       <br />
 
       <h2>Nov 2015–Jan 2018</h2>
@@ -140,9 +146,9 @@
     </section>
 
     <section>
-        <h2>In depth case-studies available <a class="contact" href="mailto:mail@owendodd.com"
-          >upon request</a
-        >.</h2>
+        <h2>In depth case-studies available upon request.<br/><a class="contact" href="mailto:mail@owendodd.com"
+          >mail@owendodd.com</a
+        ></h2>
       </section>
 
     <script type="text/javascript" src="/assets/js/script.js"></script>
