--- a/design/index.html
+++ b/design/index.html
@@ -84,7 +84,7 @@
         enable our network of subscribing gallery partners to managage their
         inventory of works and connect with new and established collectors.
       </p>
-      <img src="/design/assets/analytics.png" alt="Analytics dashboard">
+      <img src="/design/assets/analytics.png" alt="Analytics dashboard" />
       <h2 class="caption">Partner analytics dashboard</h2>
       <br />
 
@@ -94,12 +94,17 @@
         through the creation and optimization of commericial pathways both on
         and off platform.
       </p>
-      <img src="/design/assets/collections.png" alt="Analytics dashboard">
+      <img src="/design/assets/collections.png" alt="Analytics dashboard" />
       <h2 class="caption">Collections and collections admin</h2>
-      <img src="/design/assets/local discovery.png" alt="Analytics dashboard">
+      <img src="/design/assets/city guide.png" alt="Artsy City Guide" />
       <h2 class="caption">Artsy City Guide, in partnership with BMW</h2>
-      <img src="/design/assets/article tooltips.png" alt="Analytics dashboard">
+      <img
+        src="/design/assets/article tooltips.png"
+        alt="Analytics dashboard"
+      />
       <h2 class="caption">Aritcle artist tooltips</h2>
+      <img src="/design/assets/inputs.png" alt="Quick input" />
+      <h2 class="caption">Quick input component</h2>
       <br />
 
       <h2>Nov 2015–Jan 2018</h2>
@@ -109,6 +114,20 @@
         team as they grew to become one of the most read online arts
         publications.
       </p>
+      <img
+        src="/design/assets/feature articles.png"
+        alt="Editorial feature articles"
+      />
+      <h2 class="caption">Editorial feature articles</h2>
+      <img src="/design/assets/video articles.png" alt="Video player" />
+      <h2 class="caption">Video layout and custom player UI</h2>
+      <img
+        src="/design/assets/standard articles.png"
+        alt="Standard editorial articles"
+      />
+      <h2 class="caption">Standard editorial articles</h2>
+      <img src="/design/assets/news feed.png" alt="News feed" />
+      <h2 class="caption">News feed and news blurbs</h2>
       <br />
 
       <h2>Jan–Nov 2015</h2>
@@ -146,10 +165,14 @@
     </section>
 
     <section>
-        <h2>In depth case-studies available upon request.<br/><a class="contact" href="mailto:mail@owendodd.com"
+      <h2>Case-studies available upon request.<a class="contact date-left" href="/design/assets/od_resume_2019.pdf">Download resume</a>
+        <a class="contact date-left" href="mailto:mail@owendodd.com"
           >mail@owendodd.com</a
         ></h2>
-      </section>
+      <h2>
+        
+      </h2>
+    </section>
 
     <script type="text/javascript" src="/assets/js/script.js"></script>
   </body>
