--- a/design/index.html
+++ b/design/index.html
@@ -128,6 +128,8 @@
       <h2 class="caption">Standard editorial articles</h2>
       <img src="/design/assets/news feed.png" alt="News feed" />
       <h2 class="caption">News feed and news blurbs</h2>
+      <img src="/design/assets/brand partnerships.png" alt="Brand partnerships" />
+      <h2 class="caption">Editorial brand partnerships</h2>
       <br />
 
       <h2>Jan–Nov 2015</h2>
