--- a/design/index.html
+++ b/design/index.html
@@ -65,8 +65,8 @@
 
     <section>
       <h1>
-        Artsy <span class="date-left">(2015–Present)</span>
-        <span class="date-left">Product Designer</span>
+        Artsy <span class="date-right">(2015–Present)</span>
+        <span class="date-right">Product&nbsp;Designer</span>
       </h1>
       <p>
         Artsy is the global platform for discovering and collecting art. Artsy
@@ -84,7 +84,7 @@
         enable our network of subscribing gallery partners to managage their
         inventory of works and connect with new and established collectors.
       </p>
-      <img src="/design/assets/analytics.png" alt="Analytics dashboard" />
+      <div class="img-wrapper"><img src="/design/assets/analytics.png" alt="Analytics dashboard" /></div>
       <h2 class="caption">Partner analytics dashboard</h2>
       <br />
 
@@ -94,16 +94,16 @@
         through the creation and optimization of commericial pathways both on
         and off platform.
       </p>
-      <img src="/design/assets/collections.png" alt="Analytics dashboard" />
+      <div class="img-wrapper"><img src="/design/assets/collections.png" alt="Analytics dashboard" /></div>
       <h2 class="caption">Collections and collections admin</h2>
-      <img src="/design/assets/city guide.png" alt="Artsy City Guide" />
+      <div class="img-wrapper"><img src="/design/assets/city guide.png" alt="Artsy City Guide" /></div>
       <h2 class="caption">Artsy City Guide, in partnership with BMW</h2>
-      <img
+      <div class="img-wrapper"><img
         src="/design/assets/article tooltips.png"
         alt="Analytics dashboard"
-      />
+      /></div>
       <h2 class="caption">Aritcle artist tooltips</h2>
-      <img src="/design/assets/inputs.png" alt="Quick input" />
+      <div class="img-wrapper"><img src="/design/assets/inputs.png" alt="Quick input" /></div>
       <h2 class="caption">Quick input component</h2>
       <br />
 
@@ -114,21 +114,21 @@
         team as they grew to become one of the most read online arts
         publications.
       </p>
-      <img
+      <div class="img-wrapper"><img
         src="/design/assets/feature articles.png"
         alt="Editorial feature articles"
-      />
+      /></div>
       <h2 class="caption">Editorial feature articles</h2>
-      <img src="/design/assets/video articles.png" alt="Video player" />
+      <div class="img-wrapper"><img src="/design/assets/video articles.png" alt="Video player" /></div>
       <h2 class="caption">Video layout and custom player UI</h2>
-      <img
+      <div class="img-wrapper"><img
         src="/design/assets/standard articles.png"
         alt="Standard editorial articles"
-      />
+      /></div>
       <h2 class="caption">Standard editorial articles</h2>
-      <img src="/design/assets/news feed.png" alt="News feed" />
+      <div class="img-wrapper"><img src="/design/assets/news feed.png" alt="News feed" /></div>
       <h2 class="caption">News feed and news blurbs</h2>
-      <img src="/design/assets/brand partnerships.png" alt="Brand partnerships" />
+      <div class="img-wrapper"><img src="/design/assets/brand partnerships.png" alt="Brand partnerships" /></div>
       <h2 class="caption">Editorial brand partnerships</h2>
       <br />
 
@@ -143,8 +143,8 @@
 
     <section>
       <h1>
-        Berger & Föhr <span class="date-left">(May 2013–Sep 2014)</span>
-        <span class="date-left">Designer</span>
+        Berger & Föhr <span class="date-right">(May 2013–Sep 2014)</span>
+        <span class="date-right">Designer</span>
       </h1>
       <p>
         Berger & Föhr is a graphic and brand experience design studio in
@@ -156,8 +156,8 @@
 
     <section>
       <h1>
-        Zut Alors! <span class="date-left">(Jan 2013–May 2013)</span>
-        <span class="date-left">Design Intern</span>
+        Zut Alors! <span class="date-right">(Jan 2013–May 2013)</span>
+        <span class="date-right">Design&nbsp;Intern</span>
       </h1>
       <p>
         Zut Alors! is a graphic design studio based in New York City. They
@@ -167,8 +167,8 @@
     </section>
 
     <section>
-      <h2>Case-studies available upon request.<a class="contact date-left" href="/design/assets/od_resume_2019.pdf">Download resume</a>
-        <a class="contact date-left" href="mailto:mail@owendodd.com"
+      <h2> <span class="date-right">Case-studies available upon request.</span><a class="contact date-right" href="/design/assets/od_resume_2019.pdf">Download resume</a>
+        <a class="contact date-right" href="mailto:mail@owendodd.com"
           >mail@owendodd.com</a
         ></h2>
       <h2>
